krssparser/src/main/java/org/coode/owl/krssparser/KRSSParser.java
/* Generated By:JavaCC: Do not edit this line. KRSSParser.java */
package org.coode.owl.krssparser;

import org.semanticweb.owl.model.*;

import java.net.URI;
import java.net.URISyntaxException;
import java.util.HashMap;
import java.util.HashSet;
import java.util.Map;
import java.util.Set;

public class KRSSParser implements KRSSParserConstants {

    private OWLOntology ontology;

    private OWLDataFactory dataFactory;

    private Map<String, URI> string2URI;

    private boolean ignoreAnnotationsAndDeclarations = false;

    private String base;

    public void setOntology(OWLOntology ontology, OWLDataFactory dataFactory) {
        this.ontology = ontology;
        this.dataFactory = dataFactory;
        string2URI = new HashMap<String, URI>();
        base = ontology.getURI().toString() + "#";
    }

    protected void addAxiom(OWLAxiom ax) throws KRSSOWLParserException {
        try {
            ((OWLMutableOntology) ontology).applyChange(new AddAxiom(ontology, ax));
        }
        catch (OWLOntologyChangeException e) {
            throw new KRSSOWLParserException(e);
        }
    }

    public URI getURI(String s) throws URISyntaxException {
        s = base + s;
        URI uri = string2URI.get(s);
        if (uri == null) {
            uri = new URI(s);
            string2URI.put(s, uri);
        }
        return uri;
    }

    public void setIgnoreAnnotationsAndDeclarations(boolean b) {
        ignoreAnnotationsAndDeclarations = b;
    }

    final public void parse() throws ParseException, KRSSOWLParserException {
        OWLAxiom ax;
        label_1:
        while (true) {
            if (jj_2_1(2)) {
                ;
            } else {
                break label_1;
            }
            ax = TBoxStatement();
            if (ax != null) {
                addAxiom(ax);
            }
        }
        if (jj_2_2(2)) {
            jj_consume_token(ENDTBOX);
        } else {
            ;
        }
        label_2:
        while (true) {
            if (jj_2_3(2)) {
                ;
            } else {
                break label_2;
            }
            ABoxStatement();
        }
        if (jj_2_4(2)) {
            jj_consume_token(ENDABOX);
        } else {
            ;
        }
        jj_consume_token(0);
    }

    final public OWLAxiom TBoxStatement() throws ParseException {
        OWLAxiom ax;
        if (jj_2_5(2)) {
            ax = DefinePrimitiveConcept();
        } else if (jj_2_6(2)) {
            ax = DefineConcept();
        } else if (jj_2_7(2)) {
            ax = DefinePrimitiveRole();
        } else if (jj_2_8(2)) {
            ax = Transitive();
        } else if (jj_2_9(2)) {
            ax = Range();
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) return ax;
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom DefinePrimitiveConcept() throws ParseException {
        OWLClassExpression subClass;
        OWLClassExpression superClass;
        jj_consume_token(OPENPAR);
        jj_consume_token(DEFINEPRIMITIVECONCEPT);
        subClass = ConceptName();
        superClass = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getSubClassOf(subClass, superClass);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom DefineConcept() throws ParseException {
        OWLClassExpression clsA;
        OWLClassExpression clsB;
        jj_consume_token(OPENPAR);
        jj_consume_token(DEFINECONCEPT);
        clsA = ConceptName();
        clsB = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        Set<OWLClassExpression> ops = new HashSet<OWLClassExpression>();
        ops.add(clsA);
        ops.add(clsB);
        {
            if (true) return dataFactory.getOWLEquivalentClassesAxiom(ops);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom DefinePrimitiveRole() throws ParseException {
        OWLObjectProperty subProp;
        OWLObjectProperty superProp;
        jj_consume_token(OPENPAR);
        jj_consume_token(DEFINEPRIMITIVEROLE);
        subProp = RoleName();
        superProp = RoleName();
        if (jj_2_10(2)) {
            jj_consume_token(42);
            RoleName();
        } else {
            ;
        }
        jj_consume_token(CLOSEPAR);
        if (superProp != null) {
            {
                if (true) return dataFactory.getSubObjectPropertyOf(subProp, superProp);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Transitive() throws ParseException {
        OWLObjectProperty prop;
        jj_consume_token(OPENPAR);
        jj_consume_token(TRANSITIVE);
        prop = RoleName();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getTransitiveObjectProperty(prop);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Range() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression rng;
        jj_consume_token(OPENPAR);
        jj_consume_token(RANGE);
        prop = RoleName();
        rng = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectPropertyRange(prop, rng);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression ConceptExpression() throws ParseException {
        OWLClassExpression desc;
        if (jj_2_11(2)) {
            desc = ConceptName();
        } else if (jj_2_12(2)) {
            desc = And();
        } else if (jj_2_13(2)) {
            desc = Or();
        } else if (jj_2_14(2)) {
            desc = Not();
        } else if (jj_2_15(2)) {
            desc = All();
        } else if (jj_2_16(2)) {
            desc = Some();
        } else if (jj_2_17(2)) {
            desc = AtLeast();
        } else if (jj_2_18(2)) {
            desc = AtMost();
        } else if (jj_2_19(2)) {
            desc = Exactly();
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) return desc;
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression ConceptName() throws ParseException {
        URI uri;
        uri = Name();
        {
            if (true) return dataFactory.getOWLClass(uri);
        }
        throw new Error("Missing return statement in function");
    }

    final public Set<OWLClassExpression> ConceptSet() throws ParseException {
        Set<OWLClassExpression> descs = new HashSet<OWLClassExpression>();
        OWLClassExpression desc;
        label_3:
        while (true) {
            desc = ConceptExpression();
            descs.add(desc);
            if (jj_2_20(2)) {
                ;
            } else {
                break label_3;
            }
        }
        {
            if (true) return descs;
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression And() throws ParseException {
        Set<OWLClassExpression> operands;
        jj_consume_token(OPENPAR);
        jj_consume_token(AND);
        operands = ConceptSet();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectIntersectionOf(operands);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Or() throws ParseException {
        Set<OWLClassExpression> operands;
        jj_consume_token(OPENPAR);
        jj_consume_token(OR);
        operands = ConceptSet();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectUnionOf(operands);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Not() throws ParseException {
        OWLClassExpression operand;
        jj_consume_token(OPENPAR);
        jj_consume_token(NOT);
        operand = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectComplementOf(operand);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression All() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression filler;
        jj_consume_token(OPENPAR);
        jj_consume_token(ALL);
        prop = RoleName();
        filler = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectAllValuesFrom(prop, filler);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Some() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression filler;
        jj_consume_token(OPENPAR);
        jj_consume_token(SOME);
        prop = RoleName();
        filler = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectSomeValuesFrom(prop, filler);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression AtLeast() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression filler;
        int card;
        jj_consume_token(OPENPAR);
        jj_consume_token(ATLEAST);
        card = Integer();
        prop = RoleName();
        filler = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectMinCardinality(prop, card, filler);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression AtMost() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression filler;
        int card;
        jj_consume_token(OPENPAR);
        jj_consume_token(ATMOST);
        card = Integer();
        prop = RoleName();
        filler = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectMaxCardinality(prop, card, filler);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLClassExpression Exactly() throws ParseException {
        OWLObjectProperty prop;
        OWLClassExpression filler;
        int card;
        jj_consume_token(OPENPAR);
        jj_consume_token(EXACTLY);
        card = Integer();
        prop = RoleName();
        filler = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectExactCardinality(prop, card, filler);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLObjectProperty RoleName() throws ParseException {
        URI uri;
        uri = Name();
        {
            if (true) return dataFactory.getOWLObjectProperty(uri);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom ABoxStatement() throws ParseException {
        OWLAxiom ax;
        if (jj_2_21(2)) {
            ax = Instance();
        } else if (jj_2_22(2)) {
            ax = Related();
        } else if (jj_2_23(2)) {
            ax = Equal();
        } else if (jj_2_24(2)) {
            ax = Distinct();
        } else {
            jj_consume_token(-1);
            throw new ParseException();
        }
        {
            if (true) return ax;
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Instance() throws ParseException {
        OWLIndividual ind;
        OWLClassExpression type;
        jj_consume_token(OPENPAR);
        jj_consume_token(INSTANCE);
        ind = IndividualName();
        type = ConceptExpression();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getClassAssertion(ind, type);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Related() throws ParseException {
        OWLIndividual subj;
        OWLObjectProperty prop;
        OWLIndividual obj;
        jj_consume_token(OPENPAR);
        jj_consume_token(RELATED);
        subj = IndividualName();
        prop = RoleName();
        obj = IndividualName();
        jj_consume_token(CLOSEPAR);
        {
            if (true) return dataFactory.getObjectPropertyAssertion(subj, prop, obj);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Equal() throws ParseException {
        OWLIndividual indA, indB;
        Set<OWLIndividual> inds = new HashSet<OWLIndividual>();
        jj_consume_token(OPENPAR);
        jj_consume_token(EQUAL);
        indA = IndividualName();
        indB = IndividualName();
        jj_consume_token(CLOSEPAR);
        inds.add(indA);
        inds.add(indB);
        {
            if (true) return dataFactory.getSameIndividuals(inds);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLAxiom Distinct() throws ParseException {
        OWLIndividual indA, indB;
        Set<OWLIndividual> inds = new HashSet<OWLIndividual>();
        jj_consume_token(OPENPAR);
        jj_consume_token(DISTINCT);
        indA = IndividualName();
        indB = IndividualName();
        jj_consume_token(CLOSEPAR);
        inds.add(indA);
        inds.add(indB);
        {
            if (true) return dataFactory.getDifferentIndividuals(inds);
        }
        throw new Error("Missing return statement in function");
    }

    final public OWLIndividual IndividualName() throws ParseException {
        URI name;
        name = Name();
        {
            if (true) return dataFactory.getOWLNamedIndividual(name);
        }
        throw new Error("Missing return statement in function");
    }

    final public URI Name() throws ParseException {
        Token t;
        t = jj_consume_token(NAME);
        try {
            {
                if (true) return getURI(t.image);
            }
        }
        catch (URISyntaxException e) {
            {
                if (true) return null;
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public int Integer() throws ParseException {
        Token t;
        t = jj_consume_token(INT);
        {
            if (true) return Integer.parseInt(t.image);
        }
        throw new Error("Missing return statement in function");
    }

    final private boolean jj_2_1(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_1();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(0, xla);
        }
    }

    final private boolean jj_2_2(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_2();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(1, xla);
        }
    }

    final private boolean jj_2_3(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_3();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(2, xla);
        }
    }

    final private boolean jj_2_4(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_4();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(3, xla);
        }
    }

    final private boolean jj_2_5(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_5();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(4, xla);
        }
    }

    final private boolean jj_2_6(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_6();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(5, xla);
        }
    }

    final private boolean jj_2_7(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_7();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(6, xla);
        }
    }

    final private boolean jj_2_8(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_8();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(7, xla);
        }
    }

    final private boolean jj_2_9(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_9();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(8, xla);
        }
    }

    final private boolean jj_2_10(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_10();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(9, xla);
        }
    }

    final private boolean jj_2_11(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_11();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(10, xla);
        }
    }

    final private boolean jj_2_12(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_12();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(11, xla);
        }
    }

    final private boolean jj_2_13(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_13();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(12, xla);
        }
    }

    final private boolean jj_2_14(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_14();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(13, xla);
        }
    }

    final private boolean jj_2_15(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_15();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(14, xla);
        }
    }

    final private boolean jj_2_16(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_16();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(15, xla);
        }
    }

    final private boolean jj_2_17(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_17();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(16, xla);
        }
    }

    final private boolean jj_2_18(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_18();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(17, xla);
        }
    }

    final private boolean jj_2_19(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_19();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(18, xla);
        }
    }

    final private boolean jj_2_20(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_20();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(19, xla);
        }
    }

    final private boolean jj_2_21(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_21();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(20, xla);
        }
    }

    final private boolean jj_2_22(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_22();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(21, xla);
        }
    }

    final private boolean jj_2_23(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_23();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(22, xla);
        }
    }

    final private boolean jj_2_24(int xla) {
        jj_la = xla;
        jj_lastpos = jj_scanpos = token;
        try {
            return !jj_3_24();
        }
        catch (LookaheadSuccess ls) {
            return true;
        }
        finally {
            jj_save(23, xla);
        }
    }

    final private boolean jj_3_17() {
        if (jj_3R_18()) return true;
        return false;
    }

    final private boolean jj_3R_18() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(ATLEAST)) return true;
        return false;
    }

    final private boolean jj_3R_10() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(RANGE)) return true;
        return false;
    }

    final private boolean jj_3R_25() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(DISTINCT)) return true;
        return false;
    }

    final private boolean jj_3_24() {
        if (jj_3R_25()) return true;
        return false;
    }

    final private boolean jj_3_7() {
        if (jj_3R_8()) return true;
        return false;
    }

    final private boolean jj_3R_17() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(SOME)) return true;
        return false;
    }

    final private boolean jj_3R_9() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(TRANSITIVE)) return true;
        return false;
    }

    final private boolean jj_3_16() {
        if (jj_3R_17()) return true;
        return false;
    }

    final private boolean jj_3R_24() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(EQUAL)) return true;
        return false;
    }

    final private boolean jj_3_23() {
        if (jj_3R_24()) return true;
        return false;
    }

    final private boolean jj_3R_16() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(ALL)) return true;
        return false;
    }

    final private boolean jj_3R_8() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(DEFINEPRIMITIVEROLE)) return true;
        return false;
    }

    final private boolean jj_3_15() {
        if (jj_3R_16()) return true;
        return false;
    }

    final private boolean jj_3R_23() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(RELATED)) return true;
        return false;
    }

    final private boolean jj_3_6() {
        if (jj_3R_7()) return true;
        return false;
    }

    final private boolean jj_3R_15() {
        if (jj_scan_token(OPENPAR)) return true;
        if (jj_scan_token(NOT)) return true;
        return false;
    }

    final private boolean jj_3_22() {
        if (jj_3R_23()) return true;
        return false;
    }

    final private boolean jj_3_4() {
        if (jj_scan_token(ENDABOX)) return true;
        return false;
    }

    final private boolean jj_3_14() {
        if (jj_3R_15()) return true;
        return false;
    }
